# soloud

./: CMakeLists.txt
include/: soloud_fftfilter.h
src/audiosource/wav/: stb_vorbis.c
src/core/: soloud.cpp
